--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.4
+  dropdown_search: ^5.0.3
+  dio: ^4.0.6
+  go_router: ^5.1.5
 
 dev_dependencies:
   flutter_test:
